kubernetes/infrastructure/controllers/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
